Don't ring the terminal bell if the user forward-searches for a string that appears in the first displayed line.

This patch was supplied by M. Levinson in PR bin/45451.